Stretches home contents to ensure minimum height

--- a/wp-content/themes/vaughan-capital/assets/styles/partials/_layout.scss
+++ b/wp-content/themes/vaughan-capital/assets/styles/partials/_layout.scss
@@ -43,7 +43,7 @@
         margin: 0;
     }
 
-    .intro {
+    .site-main {
         min-height: 50vh;
         padding: $line-height-computed*3 0 $line-height-computed*6 0;
     }
